# cypy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  setup.py
.cursor/rules/: cypy-trackers.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: smoke.yml  uuid-freethreaded.yml
bench/: BENCH.md  __init__.py  _bench_util.py  cyaccessors_inventory_bench.py  cyansi_bench.py  cyarray_bench.py  cybool_bench.py  cybuffer_bench.py  cybytearray_bench.py  cybytes_bench.py  cycellobject_bench.py  cycodecs_bench.py  cycomplex_bench.py  cycontextvars_bench.py  cyconversion_bench.py  cydatetime_bench.py  cydeque_bench.py  cydescr_bench.py  cydict_bench.py  cyeq_inventory_bench.py  cyeq_misc_bench.py  cyfileobject_bench.py  cyfloat_bench.py  cyfunction_bench.py  cygc_bench.py  cygenobject_bench.py  cyiterator_bench.py  cyiterobject_bench.py  cylist_bench.py  cylong_bench.py  cymapping_bench.py  cymarshal_bench.py  cymemoryview_bench.py  cymethod_bench.py  cymodule_bench.py  cyne_search_inventory_bench.py  cynumber_bench.py  cyobject_bench.py  cypycapsule_bench.py  cyrange_bench.py  (+12 more)
bench/tier_b/: .gitignore  __init__.py  _gen_eq_inventory.py  _gen_wave_hot.py  _sink.pxi  _tb_util.py  build.py  cyansi.py  cyansi_tb.pyx  cyarray.py  cyarray_tb.pyx  cybool.py  cybool_tb.pyx  cybuffer.py  cybuffer_tb.pyx  cybytearray.py  cybytearray_tb.pyx  cybytes.py  cybytes_tb.pyx  cycellobject.py  cycellobject_tb.pyx  cycodecs.py  cycodecs_tb.pyx  cycomplex.py  cycomplex_tb.pyx  cycontextvars.py  cycontextvars_tb.pyx  cyconversion.py  cyconversion_tb.pyx  cydatetime.py  cydatetime_tb.pyx  cydescr.py  cydescr_tb.pyx  cydict.py  cydict_tb.pyx  cyeq_buffers_tb.pyx  cyeq_containers_tb.pyx  cyeq_inventory.py  cyeq_misc_tb.pyx  cyeq_scalars_tb.pyx  (+55 more)
docs/: AGENT_LOOPS.md  EQ_INVENTORY.md  EQ_INVENTORY_TIERB.md  EQ_RUNTIME.md  NAMING.md  OPS_INVENTORY.md  OPS_INVENTORY_TIERB.md  PIPELINE.md  README.md  RELEASE.md  SAFETY.md  TEMPLATE.md
docs/future/: MONKEY.md
docs/modules/: 001_cytuple.md  002_cybytes.md  003_cydict.md  004_cylist.md  005_cyset.md  006_cystr.md  007_cyunicode.md  008_cyansi.md  009_cygc.md  010_cyerr.md  (+46 more)
examples/: README.md  STARTER.md  py_cstr_bytes.py  py_overlap_mapping_vs_dict.py  py_overlap_sequence_vs_list.py  py_overlap_str_vs_unicode.py  pyarray.py  pybool.py  pybuffer.py  pybytearray.py  pybytes.py  pycellobject.py  pycodecs.py  pycomplex.py  pycontextvars.py  pyconversion.py  pydatetime.py  pydeque.py  pydescr.py  pydict.py  pyfileobject.py  pyfloat.py  pyfunction.py  pygc.py  pygenobject.py  pyhot.py  pyiterator.py  pyiterobject.py  pylist.py  pylong.py  pymapping.py  pymarshal.py  pymemoryview.py  pymethod.py  pymodule.py  pynumber.py  pyobject.py  pypycapsule.py  pyrange.py  pysequence.py  (+10 more)
scripts/: check_exports.py  eq_loop_tmux.sh  grade_trackers.py  ops_inventory_coverage.py  smoke_barrel_cimport.sh
tests/: test_uuid.py
(+170 files in other folders)
